* Removed deliveries from semen extraction event
* Move farrowing group when moving a lactating female

Version 3.4.0 - 2015-01-22
* Initial release