@@ -1,3 +1,6 @@
+@ 2017-05-31
+* Tryton now only allows the current user to use the user specified farms.
+
 * Removed deliveries from semen extraction event
 * Move farrowing group when moving a lactating female
 
